# time-series-forecasting-cluserting

./: .gitignore  pyproject.toml  stocks_list.yaml
clusters_appended_ts/dtw/: cluster_1_combined.parquet  cluster_2_combined.parquet  cluster_3_combined.parquet  cluster_4_combined.parquet  cluster_5_combined.parquet
clusters_appended_ts/embeddings/: cluster_0_combined.parquet  cluster_2_combined.parquet  cluster_3_combined.parquet  cluster_4_combined.parquet
clusters_appended_ts/statistical/: cluster_1_combined.parquet  cluster_2_combined.parquet  cluster_4_combined.parquet
configuration/: tickers.yaml
data/: AAPL_1h_data_2025-02-13 17:22:10.254299.csv
data/chronos/: AAPL.csv  AAPL.parquet  ADBE.csv  ADBE.parquet  AMZN.csv  AMZN.parquet  AXP.csv  AXP.parquet  BAC.csv  BAC.parquet  BMY.csv  BMY.parquet  BP.csv  BP.parquet  COP.csv  COP.parquet  COST.csv  COST.parquet  CVX.csv  CVX.parquet  DIS.csv  DIS.parquet  F.csv  F.parquet  GM.csv  GM.parquet  GOOGL.csv  GOOGL.parquet  GS.csv  GS.parquet  IBM.csv  IBM.parquet  INTC.csv  INTC.parquet  JNJ.csv  JNJ.parquet  JPM.csv  JPM.parquet  KO.csv  KO.parquet  (+59 more)
data/raw/: AAPL.csv  AAPL.parquet  AAPL_data.csv  ADBE.csv  ADBE.parquet  AMZN.csv  AMZN.parquet  AXP.csv  AXP.parquet  BAC.csv  BP.csv  (+88 more)
env/: environment.yml  requirements.txt
environment/: environment.yml  requirements.txt
notebooks/: data_extraction.ipynb  data_preprocessing.ipynb  model_fine_tuning.ipynb  training_model.ipynb
notes/: ideas.md  plan.md
src/: download_data.py  initialize_logfile.py  main.py  preprocess_chronos.py  update_data.py  utils.py
(+102 files in other folders)
